# crypbot

./: .env.example  .gitignore  ADMIN_USER_GUIDE.md  AGENTS.md  AI_STRATEGY_ASSISTANT.md  API_REFERENCE.md  BACKUP_RESTORE.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  EXCHANGE_CREDENTIALS.md  FEATURE_CHECKLIST.md  INSTALL.md  LIVE_TRADING_SETUP.md  MOCK_DEMO_GUIDE.md  PEN_TEST_CHECKLIST.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  RISK_DISCLOSURE.md  SECURITY.md  TENANT_ADMIN_GUIDE.md  TRADER_USER_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  production.env.example
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_durable_control_plane.py  0003_exchange_credentials.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  repositories.py
backend/app/domain/: types.py
backend/app/exchanges/: bingx.py  fake.py  interfaces.py
backend/app/services/: control_plane.py  copy.py  durable_security.py  orders.py  reconciliation.py  risk.py  trading_platform.py  twap.py  volume_execution.py
backend/tests/: test_control_plane.py  test_core.py  test_durable_security.py  test_production_safety.py  test_repositories.py  test_trading_platform.py
docs/: api.md  architecture.md  deployment.md  progress.md  runbook.md  security.md  testing-strategy.md
frontend/: Dockerfile  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.test.ts  main.tsx  style.css
infra/nginx/: default.conf
scripts/: seed_dev.py
