[project]
name = "crypbot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2.7", "pydantic-settings>=2.2", "sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1", "redis>=5", "httpx>=0.27", "websockets>=12", "argon2-cffi>=23", "python-jose[cryptography]>=3.3", "cryptography>=42", "prometheus-client>=0.20", "structlog>=24", "pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
ignore = ["E701", "E702", "E401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
